[package]
name = "teen_patti_on_the_chain"
version = "0.1.0"
authors = ["NEAR Friend <gandhisamay200@gmail.com>"]
edition = "2021"


[lib]
name = "library"
path = "./teenpatti/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
phf = "0.10.1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true